--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/logo-arrow.ico">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
-<body class="mat-typography">
+<body>
   <app-root></app-root>
 </body>
 
